# infinite-Craft-Stuff

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  Recipe Files  dead_elements.txt
Depth Explorer/: (dot)hack Seed - 100% gen 5.txt  100% gen 10.txt  @ Seed - 100% gen 5.txt  Alphabet Seed - 100% gen 7.txt  Alphabet Seed - 100% gen 8.txt  Hashtag Seed - 100% gen 6.txt  Punctuation Seed - 100% gen 7.txt  README.md  _Alphabet Soup_ Seed - 100% gen 5.txt
Lineages Files/: example
Recipe Files/: a.ic
Recipe Files In/: Helper-Save.ic
src/: depth_explorer.rs  layer_explorer.rs  lineage.rs  load_recipes.rs  main.rs  recipe_loader.rs  recipe_requestor.rs  structures.rs
