[package]
name = "rust"
version = "0.1.0"
edition = "2024"


[profile.release]
# debug = false
# lto = "fat"
# codegen-units = 1
# opt-level = 3    # Max optimization level (default for release). 0=none, 1=basic, 2=some, 3=all, s=size, z=size+more


[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
rayon = "1.10.0"
rustc-hash = "2.1.1"
dashmap = { version = "6.1.0", features = ["rayon"] }
tinyvec = { version = "1.9.0", features = ["alloc"] }
arc-swap = "1.7.1"
libdeflater = "1.23.1" # For Gzip

tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
futures = "0.3.31"
async-recursion = "1.1.1"
urlencoding = "2.1.3" # For safely encoding parameters
reqwest = { version = "0.12.15", features = ["json"] }

colored = "3.0.0"