[package]
name = "infinite-craft-shenanigance"
version = "0.1.0"
edition = "2024"


[profile.release]
debug = false
# lto = "fat"
# codegen-units = 1
opt-level = 2    # 0=none, 1=basic, 2=some, 3=all, s=size, z=size+more
overflow-checks = true


[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rayon = "1.11.0"
rustc-hash = "2.1.2"
dashmap = { version = "6.1.0", features = ["rayon"] }
tinyvec = { version = "1.11.0", features = ["alloc"] }
libdeflater = "1.25.2" # For Gzip

tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "sync", "time", "net", "signal"] }
futures = { version = "0.3.32", default-features = false }
async-recursion = "1.1.1"
urlencoding = "2.1.3" # For safely encoding parameters
reqwest = { version = "0.13.2", default-features = false, features = ["json"] }

colored = "3.1.0"
fastrand = "2.3.0"
num-format = "0.4.4"